# WP-final-Plugin-Review-Assistant

./: FIXED_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_V2.md  INSTALLATION.md  PROJECT_FILES.txt  QUICKSTART.md  README.md  RUN_NOW.md  START_HERE.md  V3_ARCHITECTURE.md  VERIFICATION.md  build.ps1  main.py  pyproject.toml  requirements.txt  scratch_report.html  settings.json  version.txt
.gemini/antigravity/brain/8284eb6a-43ef-41de-b320-f18c4bc1e5b2/scratch/: test_ignore.py
scratch/: run_scan.py  test_fstring.py  verify_html.py
src/: __init__.py  comprehensive_review.py  models.py  report_generator.py  utils.py
src/analysis/: agents_rules_analyzer.py  static_analyzer.py
src/core/: ai_analyzer.py  checklist_mapper.py  localwp_validator.py  plugin_check_runner.py  plugin_detector.py  review_orchestrator.py  settings_manager.py  summary_builder.py  wp_cli_runner.py
src/ui/: main_window.py  settings_dialog.py
tests/: test_core_integration.py
