[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-plugin-review-assistant"
version = "1.0.0"
description = "Professional Windows desktop tool for WordPress plugin review using static analysis and Plugin Check"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.7.0",
    "jinja2>=3.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["templates/*.html", "templates/*.txt"]
